[gd_scene load_steps=3 format=3 uid="uid://cc47p45p8huyn"]

[ext_resource type="Script" path="res://enemies/spawner.gd" id="1_yk74f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_byoxp"]
radius = 62.0725

[node name="Spawner" type="Node2D"]
script = ExtResource("1_yk74f")

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource("CircleShape2D_byoxp")

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_enemy_detector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_enemy_detector_body_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
